Testing Final. User Manual Headings

--- a/Manual/manual.tex
+++ b/Manual/manual.tex
@@ -36,7 +36,7 @@ My program has been tested, and works on Windows 7 and Vista. Although the progr
 
 \subsection{Prerequisite Installation}
 
-%include as many subsubsections as necessary for each piece of required software
+
 \subsubsection{Installing Python 3.4}
 
 \subsubsection{Installing PyQt}
@@ -86,9 +86,27 @@ To run the system, open the file location that you extracted the zip file to pre
 \subsection{Tutorial Questions}
 
 %include as many subsubsections as necessary for each question in your list
-\subsubsection{Question 1}
+\subsubsection{How Do I Change My Profile Picture?}
 
-\subsubsection{Question 2}
+\subsubsection{How Do I Change My Profile Name?}
+
+\subsubsection{How Do I Change My Profile Email Address?}
+
+\subsubsection{How Do I Add a Trick?}
+
+\subsubsection{How Do I Delete a Trick?}
+
+\subsubsection{How Do I Add a Skatepark?}
+
+\subsubsection{How Do I Access Existing Skatepark Details?}
+
+\subsubsection{How Do I Hide Skateparks?} %Command Line Functionality?
+
+
+%REVIEW?
+
+
+\subsubsection{How Do I Contact Support?}
 
 \subsection{Saving}
 
@@ -118,4 +136,4 @@ Save to an external hard drive/USB stick
 
 \subsection{Restoring Data}
 
-Copy the database file back.
+From the
