--- a/Manual/manual.tex
+++ b/Manual/manual.tex
@@ -29,7 +29,7 @@ Before installing, your computer must meet the system requirements. As discussed
     \item Windows 7 Operating System
 \end{itemize}
 
-My program has been tested, and works on Windows 7 and Vista. Although the program hasn't been tested on Mac computers or windows 8, but the program should still work fine as long as the required programs are installed correctly as discussed below.
+My program has been tested, and works on Windows 7 and Vista. Although the program hasn't been tested on Mac computers or windows 8, the program should still work fine as long as the required programs are installed correctly as discussed below.
 
 
 
@@ -83,24 +83,130 @@ To run the system, open the file location that you extracted the zip file to pre
 
 \subsection{Assumptions}
 
+I am assuming that the user has basic computer operating skills. These include: Using a mouse and keyboard. Apart from that, to use the Skateboard Progress Tracker, you need no prior knowledge of the system, or how it works in order to operate the program.
+
 \subsection{Tutorial Questions}
 
 %include as many subsubsections as necessary for each question in your list
 \subsubsection{How Do I Change My Profile Picture?}
 
+\begin{figure}[H]
+    \includegraphics[width=\textwidth]{./Manual/Images/SaveProfilePicture.pdf}
+    \caption{Changing The Profile Picture} \label{fig:Change Profile Picture}
+\end{figure}
+
+The figure above shows you a step by step graphical tutorial in how to change your profile picture. Below, a text tutorial will guide you through the numbers represented on the figure.
+\begin{enumerate}
+\item Click on the 'Change Picture' button on the profile tool bar.
+\item A pop-up will appear, allowing you to chose a JPEG image to use as your profile picture. Double click on an appropriate JPEG image, this will save the profile picture and change the image on your profile.
+\end{enumerate}
+
+
 \subsubsection{How Do I Change My Profile Name?}
+
+\begin{figure}[H]
+    \includegraphics[width=\textwidth]{./Manual/Images/ChangeName.pdf}
+    \caption{Changing The Profile name} \label{fig:Change Name}
+\end{figure}
+
+The figure above shows you a step by step graphical tutorial in how to change your profile picture. Below, a text tutorial will guide you through the numbers represented on the figure.
+
+\begin{enumerate}
+\item This is the field available to put your First Name in.
+\item This is the field available to put your Last Name in.
+\item Click edit to enter edit mode, which allows you to edit your name. Once this is done, enter your name in the fields.
+\item Once you have changed your name, save the changes by clicking save.
+\end{enumerate}
 
 \subsubsection{How Do I Change My Profile Email Address?}
 
+\begin{figure}[H]
+    \includegraphics[width=\textwidth]{./Manual/Images/ChangeEmail.pdf}
+    \caption{Changing The Profile Email Address} \label{fig:Change Email}
+\end{figure}
+
+The figure above shows you a step by step graphical tutorial in how to change your profile picture. Below, a text tutorial will guide you through the numbers represented on the figure.
+
+\begin{enumerate}
+\item This field is available to put your email address in.
+\item Click edit to enter edit mode, which allows you to change your email. Once this is done, enter your email address in the appropriate field.
+\item Once you have changed your email address, save the changes by clicking save.
+\end{enumerate}
+
 \subsubsection{How Do I Add a Trick?}
+
+\begin{figure}[H]
+    \includegraphics[width=\textwidth]{./Manual/Images/AddTrick.pdf}
+    \caption{Adding a Trick} \label{fig:Add Trick}
+\end{figure}
+
+The figure above shows you a step by step graphical tutorial in how to change your profile picture. Below, a text tutorial will guide you through the numbers represented on the figure.
+
+\begin{enumerate}
+\item Click on the tricks tab.
+\item Click on the 'Add Trick' button in the tricks tool bar, this will load a side form allowing you to add details about the trick you wish to add.
+\item Fill in all of the fields that you can about that trick. The two optional fields are the trick image and tutorial link.
+\item Once you have filled in the information you wish about the trick, click save to add the trick to the database.
+\end{enumerate}
 
 \subsubsection{How Do I Delete a Trick?}
 
+\begin{figure}[H]
+    \includegraphics[width=\textwidth]{./Manual/Images/DeleteTrick.pdf}
+    \caption{Changing The Profile name} \label{fig:Change Name}
+\end{figure}
+
+The figure above shows you a step by step graphical tutorial in how to change your profile picture. Below, a text tutorial will guide you through the numbers represented on the figure.
+
+\begin{enumerate}
+\item Click on the tricks tab.
+\item Select the row of the trick that you wish to delete.
+\item Press the delete key on your keyboard.
+\item Pressing the delete key will stimulate a dialog box to appear, confirming that you wish to delete that trick. To delete the trick click on the save button and to keep the trick press the cancel button.
+\item If the delete button is pressed the trick will be removed from the database.
+\end{enumerate}
+
 \subsubsection{How Do I Add a Skatepark?}
+
+\begin{figure}[H]
+    \includegraphics[width=\textwidth]{./Manual/Images/ChangeName.pdf}
+    \caption{Changing The Profile name} \label{fig:Change Name}
+\end{figure}
+
+The figure above shows you a step by step graphical tutorial in how to change your profile picture. Below, a text tutorial will guide you through the numbers represented on the figure.
+
+\begin{enumerate}
+\item
+\end{enumerate}
 
 \subsubsection{How Do I Access Existing Skatepark Details?}
 
-\subsubsection{How Do I Hide Skateparks?} %Command Line Functionality?
+\begin{figure}[H]
+    \includegraphics[width=\textwidth]{./Manual/Images/ChangeName.pdf}
+    \caption{Changing The Profile name} \label{fig:Change Name}
+\end{figure}
+
+The figure above shows you a step by step graphical tutorial in how to change your profile picture. Below, a text tutorial will guide you through the numbers represented on the figure.
+
+\begin{enumerate}
+\item
+\end{enumerate}
+
+\subsubsection{How Do I Hide Skateparks?} 
+
+\begin{figure}[H]
+    \includegraphics[width=\textwidth]{./Manual/Images/ChangeName.pdf}
+    \caption{Changing The Profile name} \label{fig:Change Name}
+\end{figure}
+
+The figure above shows you a step by step graphical tutorial in how to change your profile picture. Below, a text tutorial will guide you through the numbers represented on the figure.
+
+\begin{enumerate}
+\item
+\end{enumerate}
+
+
+%Command Line Functionality?
 
 
 %REVIEW?
@@ -118,10 +224,13 @@ As discussed in the introduction some sections are not fully implemented into a 
 
 \section{Error Recovery}
 
-%include as many subsections as necessary for each error
-\subsection{Error 1}
+\subsection{Name Field Validation}
 
-\subsection{Error 2}
+\subsection{Email Address Validation}
+
+\subsection{Profile Picture File Validation}
+
+\subsection{Trick Image File Validation}
 
 
 
