--- a/Manual/manual.tex
+++ b/Manual/manual.tex
@@ -81,6 +81,8 @@ To run the system, open the file location that you extracted the zip file to pre
 
 \subsection{Introduction}
 
+This tutorial will talk you through how to navigate and operate the Skateboard Progress Tracker application, with annotated screen shots.
+
 \subsection{Assumptions}
 
 I am assuming that the user has basic computer operating skills. These include: Using a mouse and keyboard. Apart from that, to use the Skateboard Progress Tracker, you need no prior knowledge of the system, or how it works in order to operate the program.
@@ -159,7 +161,7 @@ The figure above shows you a step by step graphical tutorial in how to change yo
 The figure above shows you a step by step graphical tutorial in how to change your profile picture. Below, a text tutorial will guide you through the numbers represented on the figure.
 
 \begin{enumerate}
-\item Click on the tricks tab.
+\item Click on the 'Tricks' tab.
 \item Select the row of the trick that you wish to delete.
 \item Press the delete key on your keyboard.
 \item Pressing the delete key will stimulate a dialog box to appear, confirming that you wish to delete that trick. To delete the trick click on the save button and to keep the trick press the cancel button.
@@ -169,40 +171,48 @@ The figure above shows you a step by step graphical tutorial in how to change yo
 \subsubsection{How Do I Add a Skatepark?}
 
 \begin{figure}[H]
-    \includegraphics[width=\textwidth]{./Manual/Images/ChangeName.pdf}
-    \caption{Changing The Profile name} \label{fig:Change Name}
+    \includegraphics[width=\textwidth]{./Manual/Images/AddSkatepark.pdf}
+    \caption{Adding a Skatepark} \label{fig:Add Skatepark}
 \end{figure}
 
 The figure above shows you a step by step graphical tutorial in how to change your profile picture. Below, a text tutorial will guide you through the numbers represented on the figure.
 
 \begin{enumerate}
-\item
+\item Click on the 'Skateparks' tab.
+\item Click on the 'Add Skatepark' button in the skateparks tool bar, this will load a side form allowing you to add details about the skatepark you wish to add.
+\item Fill in all of the fields that you can about the trick, and then click on the location of the skatepark on the map to fill in the coordinates of the skateparks location.
+\item Once all the fields have been filled in, click save to add the skatepark to the database, only the last marker you placed will be saved.
 \end{enumerate}
 
 \subsubsection{How Do I Access Existing Skatepark Details?}
 
 \begin{figure}[H]
-    \includegraphics[width=\textwidth]{./Manual/Images/ChangeName.pdf}
-    \caption{Changing The Profile name} \label{fig:Change Name}
+    \includegraphics[width=\textwidth]{./Manual/Images/SkateparkDetails.pdf}
+    \caption{Accessing Skatepark Details} \label{fig:Skatepark Details}
 \end{figure}
 
 The figure above shows you a step by step graphical tutorial in how to change your profile picture. Below, a text tutorial will guide you through the numbers represented on the figure.
 
 \begin{enumerate}
-\item
+\item Click on the 'Skateparks' tab.
+\item Find the marker of the skatepark which you wish to find the details of.
+\item Hover your mouse over that marker, and an information window will appear, giving you details about that specific skatepark.
 \end{enumerate}
 
 \subsubsection{How Do I Hide Skateparks?} 
 
 \begin{figure}[H]
-    \includegraphics[width=\textwidth]{./Manual/Images/ChangeName.pdf}
-    \caption{Changing The Profile name} \label{fig:Change Name}
+    \includegraphics[width=\textwidth]{./Manual/Images/HideSkatepark.pdf}
+    \caption{Hiding Skatepark Markers} \label{fig:Hide Skatepark}
 \end{figure}
 
 The figure above shows you a step by step graphical tutorial in how to change your profile picture. Below, a text tutorial will guide you through the numbers represented on the figure.
 
 \begin{enumerate}
-\item
+\item Click on the 'Skateparks' tab.
+\item Find the marker of the skatepark which you want to hide.
+\item Hover over the skatepark you wish to hide and right click on it.
+\item The skatepark is now hidden.
 \end{enumerate}
 
 
@@ -214,6 +224,22 @@ The figure above shows you a step by step graphical tutorial in how to change yo
 
 \subsubsection{How Do I Contact Support?}
 
+\begin{figure}[H]
+    \includegraphics[width=\textwidth]{./Manual/Images/Support.pdf}
+    \caption{Contacting Support} \label{fig:Support}
+\end{figure}
+
+The figure above shows you a step by step graphical tutorial in how to change your profile picture. Below, a text tutorial will guide you through the numbers represented on the figure.
+
+\begin{enumerate}
+\item Click on the 'Support' tab.
+\item Fill your name in the field labeled: Name.
+\item Fill your Email Address in the field labeled: Email Address.
+\item Fill your query in the field labeled: Message.
+\item Click the submit button to send your query to the support team.
+\end{enumerate}
+
+
 \subsection{Saving}
 
 My program saves information automatically due to the underlying SQL framework.
@@ -221,6 +247,10 @@ My program saves information automatically due to the underlying SQL framework.
 \subsection{Limitations}
 
 As discussed in the introduction some sections are not fully implemented into a graphical user interface.
+
+
+
+
 
 \section{Error Recovery}
 
@@ -241,8 +271,30 @@ As discussed in the introduction some sections are not fully implemented into a 
 
 \subsection{Backing-up Data}
 
-Save to an external hard drive/USB stick
+To back up the program, you need to copy the folder that you extracted during the installation to an external hard drive/USB drive. The figure below shows the backing up of the system to a USB drive.
+
+\begin{figure}[H]
+    \includegraphics[width=\textwidth]{./Manual/Images/BackUp.pdf}
+    \caption{Backing Up The Skateboard Progress Tracker} \label{fig:BackUp}
+\end{figure}
+
+\begin{enumerate}
+\item Find the location of the folder that you extracted during the installation of the program.
+\item Right click on the folder and select 'copy'.
+\item Find the USB drive folder and open it.
+\item Right click in the folder and select 'paste' 
+\item Wait for the copying process to finish, and the back up of the program will be on your USB drive.
+\end{enumerate}
 
 \subsection{Restoring Data}
 
-From the
+The process for restoring the program data is shown below.
+
+\begin{figure}[H]
+    \includegraphics[width=\textwidth]{./Manual/Images/RestoringData.pdf}
+    \caption{Restoring The Skateboard Progress Tracker Data} \label{fig:Restoring Data}
+\end{figure}
+
+\begin{enumerate}
+\item
+\end{enumerate}
